- Reorganize the tagInfo Client - Update test classes accordingly